# auto_paper_summalize

./: .gitignore  README.md  pyproject.toml
src/: arxiv_papers_cron.py  get_db.py
