[project]
name = "auto_paper_summalize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ace-tools>=0.0",
    "arxiv>=2.1.3",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "huggingface-hub>=0.28.1",
    "pandas>=2.2.3",
    "protobuf>=5.29.3",
    "pymupdf>=1.25.3",
    "sentencepiece>=0.2.0",
    "sqlalchemy>=2.0.38",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]
